2006-05-10  Alexander Kanevskiy  <alexander.kanevskiy@nokia.com>

	* gtk/Makefile.am (maemo_gtk_im_switch_DEPENDENCIES): Added to fix
	issues with multi-threaded builds.

2006-05-10  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkcombobox.c (BONUS_PADDING): Add magical 2px for list mode
	(gtk_combo_box_calc_requested_width, gtk_combo_box_menu_row_changed,
	gtk_combo_box_list_row_changed): Removed the optimization that was out
	of sync with other size calculations, always queue a resize that will
	handle things consistently.
	(gtk_combo_box_remeasure, gtk_combo_box_size_request): Handle extra
	padding in size_request
	(gtk_combo_box_size_allocate): Do not allocate more space than is
	available to the child widget.
	N#28149

2006-05-09  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkcombobox.c (gtk_combo_box_size_allocate): Proper fix for
	N#28529 (I broke the previous patch)

2006-05-05  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktreeview.c (gtk_tree_view_row_inserted): Set tmpnode to the
	return value of the _gtk_rbtree_insert* functions, since that is the
	node we really want to check for visibility.
	
2006-05-05  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktreeview.c (scroll_sync_handler): force dy to be zero when
	the tree view fits on a single page. N#25460

2006-05-05  Tomas Junnonen  <tomas.junnonen@nokia.com>

	* gtk/gtkcombobox.c (gtk_combo_box_set_popup_widget): Name the
	combobox window so it can be identified as a focus target that does
	not close the input method. N#28612

2006-05-04  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkentry.c (gtk_entry_clipboard_operation_cb):
	* gtk/gtktextview.c (gtk_text_view_clipboard_operation_handler):
	Do not remove selection when invoking Copy from the IM. N#22469

2006-05-04  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreeview.c (gtk_tree_view_row_deleted): Do not schedule an
	idle callback when unmapped, 'map' will do it anyway. Someone could be